# waldb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  async_wrapper.rs  bench_rust.rs  benchmarks.rs  errors.rs  rust_bench  rust_bench.rs  test-compaction.rs  tests.rs  waldb  waldb.rs  waldb_cli.rs  waldb_original.rs
.github/workflows/: build-binaries.yml  ci.yml  npm-publish.yml  prebuild.yml  release-and-publish.yml  release.yml
benches/: performance_bench.rs  waldb_bench.rs
bindings/node/: .npmignore  .prebuildrc  Cargo.toml  README.md  bench-features.js  index.d.ts  index.js  install.js  package-lock.json  package.json  test-complete.js  test-files.js  test-fundamentals.js  test-simple.js  test-types.js  test-utils.js  test-vector-edge-cases.js  test-vector-search.js  test.js  vector-search-demo.js  waldb-0.1.2.tgz  waldb-ffi.js
bindings/node/scripts/: test-prebuild.sh
bindings/node/src/: lib.rs
docs/: index.html  performance.html
docs/api/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/api/search.desc/waldb_cli/: waldb_cli-desc-0-.js
docs/api/src/waldb_cli/: waldb_cli.rs.html
docs/api/trait.impl/core/clone/: trait.Clone.js
docs/api/trait.impl/core/fmt/: trait.Debug.js
docs/api/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/waldb_cli/: all.html  fn.main.html  fn.pretty_json.html  fn.print_help.html  fn.print_tree.html  fn.run_benchmark.html  fn.truncate.html  index.html  sidebar-items.js
examples/: chat_app.rs
(+3 files in other folders)
