[package]
name = "waldb-node"
version = "0.1.0"
authors = ["Elkyn"]
edition = "2021"
exclude = ["artifacts.json", "index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "1.1", features = ["napi-6"] }
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
once_cell = "1.21"